Feature 125 Compare with other View

--- a/net.sourceforge.eclipseccase.ui/plugin.xml
+++ b/net.sourceforge.eclipseccase.ui/plugin.xml
@@ -70,6 +70,14 @@
 			-->
 		</objectContribution>
 	</extension>
+	
+	<extension point="org.eclipse.ui.popupMenus">
+		<objectContribution objectClass="org.eclipse.core.resources.IFile"
+			adaptable="true" id="net.sourceforge.eclipseccase.popups.BuiltIn">
+			
+				</objectContribution>
+	</extension>
+	
 	<extension point="org.eclipse.ui.popupMenus">
 		<objectContribution objectClass="org.eclipse.core.resources.IResource"
 			adaptable="true" id="net.sourceforge.eclipseccase.popups.BuiltIn">
@@ -154,6 +162,11 @@
 				icon="icons/full/findMerge.png" id="net.sourceforge.eclipseccase.popups.findmerge"
 				label="Find Merge (Rebase, external tool)" menubarPath="team.main/group2">
 			</action>
+			<action
+                class="net.sourceforge.eclipseccase.ui.actions.CompareWithViewAction"
+                icon="icons/full/diff.png" id="net.sourceforge.eclipseccase.popups.compareview2"
+                label="View" menubarPath="compareWithMenu/compareWithGroup">
+            </action>
 			<action class="net.sourceforge.eclipseccase.ui.actions.HistoryAction"
 				icon="icons/full/history.png" id="net.sourceforge.eclipseccase.popups.history"
 				label="&amp;History" menubarPath="team.main/group2">
@@ -177,6 +190,11 @@
 				icon="icons/full/diff.png" id="net.sourceforge.eclipseccase.popups.comparepredecessor"
 				label="Compare with Predecessor (external tool)" menubarPath="team.main/group2">
 			</action>
+			<action
+                class="net.sourceforge.eclipseccase.ui.actions.CompareWithViewAction"
+                icon="icons/full/diff.png" id="net.sourceforge.eclipseccase.popups.compareview"
+                label="Compare with View" menubarPath="team.main/group2">
+            </action>
 			<!-- mike 20100903 In popupMenus it does not follow the same concept as actionSet. As a workaround
 			     I will put the menus under Team and group2. Not nice but it works.
 			<menu id="net.sourceforge.eclipseccase.ui.popups.checkedoutstate"
@@ -478,7 +496,21 @@
 					</pluginState>
 				</enablement>	
 			</action>
-			
+			<action
+                class="net.sourceforge.eclipseccase.ui.actions.CompareWithViewAction"
+                definitionId="net.sourceforge.eclipseccase.ui.actionset.compareview"
+                icon="icons/full/diff.png"
+                id="net.sourceforge.eclipseccase.ui.actionset.compareview"
+                label="Co&amp;mpare with View"
+                menubarPath="eclipseccase_menu/group2"
+                style="push"
+                toolbarPath="Normal/additions"
+                tooltip="Compare with View">
+                <enablement>
+                    <pluginState value="activated" id="net.sourceforge.eclipseccase">
+                    </pluginState>
+                </enablement>
+            </action>
 			<action class="net.sourceforge.eclipseccase.ui.actions.UndoCheckOutAction"
 				definitionId="net.sourceforge.eclipseccase.ui.actionset.uncheckout"
 				icon="icons/full/uncheckout.png" id="net.sourceforge.eclipseccase.ui.actionset.uncheckout"
@@ -572,6 +604,11 @@
 			categoryId="net.sourceforge.eclipseccase.category"
 			id="net.sourceforge.eclipseccase.ui.actionset.comparepredecessor">
 		</command>
+		<command name="Compare with View"
+            description="Opens the clearcase compare tool on the selected resource"
+            categoryId="net.sourceforge.eclipseccase.category"
+            id="net.sourceforge.eclipseccase.ui.actionset.compareview">
+        </command>
 		<command name="Find Checkouts"
 			description="Opens the clearcase find checkouts tool on the selected resource (external tool)"
 			categoryId="net.sourceforge.eclipseccase.category" id="net.sourceforge.eclipseccase.ui.actionset.findcheckouts">
@@ -742,6 +779,10 @@
 			contextId="org.eclipse.ui.contexts.window" schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
 			sequence="Alt+C Alt+C">
 		</key>
+		<key commandId="net.sourceforge.eclipseccase.ui.actionset.compareview"
+            contextId="org.eclipse.ui.contexts.window" schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+           sequence="Alt+C Alt+W">
+        </key>
 		<key commandId="net.sourceforge.eclipseccase.ui.actionset.cancelRefreshes"
 			contextId="org.eclipse.ui.contexts.window" schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
 			sequence="Alt+C Alt+Z">
@@ -816,6 +857,10 @@
 			commandId="net.sourceforge.eclipseccase.ui.actionset.comparepredecessor"
 			schemeId="org.eclipse.ui.defaultAcceleratorConfiguration" sequence="Alt+C C">
 		</key>
+		<key platform="gtk"
+            commandId="net.sourceforge.eclipseccase.ui.actionset.compareview"
+            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration" sequence="Alt+C W">
+        </key>
 		<key platform="gtk"
 			commandId="net.sourceforge.eclipseccase.ui.actionset.cancelRefreshes"
 			schemeId="org.eclipse.ui.defaultAcceleratorConfiguration" sequence="Alt+C Z">
