--- a/net.sourceforge.eclipseccase.test/.classpath
+++ b/net.sourceforge.eclipseccase.test/.classpath
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="lib" path="/net.sourceforge.eclipseccase/lib/powermock-easymock-junit-1.4.10/cglib-nodep-2.2.jar"/>
 	<classpathentry kind="lib" path="/net.sourceforge.eclipseccase/lib/powermock-easymock-junit-1.4.10/easymock-3.0.jar"/>
@@ -9,5 +8,6 @@
 	<classpathentry kind="lib" path="/net.sourceforge.eclipseccase/lib/powermock-easymock-junit-1.4.10/objenesis-1.2.jar"/>
 	<classpathentry kind="lib" path="/net.sourceforge.eclipseccase/lib/powermock-easymock-junit-1.4.10/powermock-easymock-1.4.10-full.jar"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
