--- a/net.sourceforge.eclipseccase.ui/.classpath
+++ b/net.sourceforge.eclipseccase.ui/.classpath
@@ -2,7 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/powermock-easymock-junit-1.4.10/cglib-nodep-2.2.jar"/>
 	<classpathentry kind="lib" path="lib/powermock-easymock-junit-1.4.10/easymock-3.0.jar"/>
 	<classpathentry kind="lib" path="lib/powermock-easymock-junit-1.4.10/javassist-3.15.0-GA.jar"/>
@@ -11,5 +10,6 @@
 	<classpathentry kind="lib" path="lib/powermock-easymock-junit-1.4.10/powermock-easymock-1.4.10-full.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/net.sourceforge.eclipseccase"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/net.sourceforge.clearcase"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
