--- a/net.sourceforge.eclipseccase.ui/bin/net/sourceforge/eclipseccase/ui/preferences/PreferenceMessages.properties
+++ b/net.sourceforge.eclipseccase.ui/bin/net/sourceforge/eclipseccase/ui/preferences/PreferenceMessages.properties
@@ -1,10 +1,10 @@
 ###############################################################################
 # Copyright (c) 2000, 2003 IBM Corporation and others.
-# All rights reserved. This program and the accompanying materials 
+# All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Common Public License v1.0
 # which accompanies this distribution, and is available at
 # http://www.eclipse.org/legal/cpl-v10.html
-# 
+#
 # Contributors:
 #     IBM Corporation - initial API and implementation
 #     Roel De Meester - externalized the preference messages
@@ -24,6 +24,7 @@ Preferences.Description.Category.General=Configure general preferences of the Cl
 Preferences.Description.Category.Source=Customize source management features:
 Preferences.Description.Category.Comments=Specify what to do with comments:
 Preferences.General.ClearCasePrimaryGroup=Clear Case Primary Group:
+Preferences.General.AutoAssociation=Automatically associate to ClearCase on startup
 Preferences.General.RefreshChildren=Prevent unneeded refreshing of files/dirs when it's parent is not under source control
 Preferences.General.IgnoreNew=Do not look for new resources not under source control
 Preferences.General.HideRefreshStateActivity=Hide background refresh state activities (requires restart)
@@ -31,19 +32,19 @@ Preferences.General.Recursive=Perform all operations recursively
 Preferences.General.PreserveTimes=Preserve file modification times
 Preferences.General.SaveDirtyEditors=Save dirty editors before ClearCase operations
 Preferences.General.QuickRefresh=Use quick refresh operation
-Preferences.General.TestLinkedParentInClearCase=Refresh the parent for linked resource. 
+Preferences.General.TestLinkedParentInClearCase=Refresh the parent for linked resource.
 Preferences.General.JobQueuePriority=Job queue priority
 Preferences.General.GraphicalTimeout=Number of seconds to wait for errors when launching graphical tools
 Preferences.General.GraphicalUpdateView=Update View with Graphical tool
 Preferences.General.ModifyConfigSpec=Forbid Config Spec modification
 Preferences.General.CompareWithExternalTool=Compare with external tool.
-Preferences.General.MergeWithExternalTool=Merge with external tool. 
+Preferences.General.MergeWithExternalTool=Merge with external tool.
 Preferences.Source.CheckoutAuto=Automatically checkout resources if necessary
 Preferences.Source.AddAuto=Automatically add resources if necessary
 Preferences.Source.AddWithCheckin=Automatically checkin resources after manual add
 Preferences.Source.AddWithMaster=Use -nmaster flag when add/checkout resource.
 Preferences.Source.CheckoutLatest=Update to latest version before checkout (useful on SnapShot views)
-Preferences.Source.FullRefreshOnAssoc=Do a full state refresh when associating a project with ClearCase 
+Preferences.Source.FullRefreshOnAssoc=Do a full state refresh when associating a project with ClearCase
 Preferences.Source.ClearDlg=Use external ClearCase user interface (cleardlg executable) where possible (Win ONLY!)
 Preferences.Source.CheckoutReserved=Reserved Checkouts
 Preferences.Source.CheckinIdentical=Checkin even if predecessor is identical
