--- a/net.sourceforge.eclipseccase/.classpath
+++ b/net.sourceforge.eclipseccase/.classpath
@@ -3,8 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="src-apache"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/net.sourceforge.clearcase"/>
 	<classpathentry kind="lib" path="lib/powermock-easymock-junit-1.4.10/junit-4.8.2.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/net.sourceforge.clearcase"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
