--- a/net.sourceforge.eclipseccase.ui/src/net/sourceforge/eclipseccase/ui/preferences/PreferenceMessages.properties
+++ b/net.sourceforge.eclipseccase.ui/src/net/sourceforge/eclipseccase/ui/preferences/PreferenceMessages.properties
@@ -60,6 +60,7 @@ Preferences.Comments.CommentCheckoutNeverOnAuto=Never prompt for comment on auto
 Preferences.Comments.CommentAddNeverOnAuto=Never prompt for comment on auto add
 Preferences.Comments.CommentEscapeXml=Escape "<>'&& with XML entities
 Preferences.Comments.BranchPrefix=Branch prefix
+Preferences.History.Records=Limit number of versions retrieved for element. 
 
 DecoratorPreferencePage.description=Customize the ClearCase decorations to suite your needs.
 DecoratorPreferencePage.category.general=General
